apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__tests__alias_renaming-2.snap
---
source: apollo-router/src/query_planner/tests.rs
assertion_line: 868
expression: "serde_json::to_value(&response).unwrap()"
---
{
  "data": {
    "testQuery": {
      "foo": {
        "field": "bbb"
      }
    }
  }
}
