apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__tests__defer_if_condition-2.snap
---
source: apollo-router/src/query_planner/tests.rs
assertion_line: 521
expression: deferred_response
---
{
  "data": {
    "me": {
      "name": "Ada Lovelace",
      "username": "@ada",
      "__typename": "User",
      "id": "1"
    }
  },
  "path": [
    "me"
  ]
}
