apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__tests__defer_if_condition-3.snap
---
source: apollo-router/src/query_planner/tests.rs
assertion_line: 572
expression: defer_disabled
---
{
  "data": {
    "me": {
      "id": "1",
      "name": "Ada Lovelace",
      "username": "@ada"
    }
  }
}
