apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__tests__defer_if_condition.snap
---
source: apollo-router/src/query_planner/tests.rs
assertion_line: 519
expression: defer_primary_response
---
{
  "data": {
    "me": {
      "__typename": "User",
      "id": "1"
    }
  }
}
