apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__tests__missing_fields_in_requires.snap
---
source: apollo-router/src/query_planner/tests.rs
assertion_line: 1011
expression: "serde_json::to_value(&response).unwrap()"
---
{
  "data": {
    "stuff": {
      "id": "1",
      "aDetailsIsEnabled": true
    }
  }
}
