apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__tests__missing_typename_and_fragments_in_requires.snap
---
source: apollo-router/src/query_planner/tests.rs
assertion_line: 1147
expression: "serde_json::to_value(&response).unwrap()"
---
{
  "data": {
    "stuff": {
      "id": "1",
      "isEnabled": true
    }
  }
}
