apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__tests__typename_propagation2.snap
---
source: apollo-router/src/query_planner/tests.rs
assertion_line: 1703
expression: "serde_json::to_value(&response).unwrap()"
---
{
  "data": {
    "book": {
      "__typename": "Book",
      "id": "1",
      "author": {
        "__typename": "Author"
      }
    }
  }
}
